--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                                         <img src="assets/images/footer/icon/03.png" alt="footer-icon">
                                     </div>
                                     <div class="ftt-content">
-                                        <p class="mb-0">Address : Bengaluru, Karnataka</p>
+                                        <p class="mb-0">Address : Kolar, Karnataka</p>
                                     </div>
                                 </div>
                             </div>
