--- a/index.html
+++ b/index.html
@@ -123,18 +123,23 @@
         <div class="container">
              <div class="row">
                  <div class="col">
-                 <img class="img-fluid" style=" padding: 15px" src="assets/images/hgraju.jpg">
+                 <img class="img-fluid" style=" padding-bottom: 15px" src="assets/images/hgraju.jpg">
                      </div>
-                 <div style="padding: 15px" class="col">
+                 </div>
+             <div class="row">
+                 <div style="padding-bottom: 15px" class="col">
                  <img class="img-fluid" src="assets/images/hg2.jpg" >
                      </div>
+                 </div>
             </div>
                  <div class="row">
-    <div style="padding: 15px" class="col">
+    <div style="padding-bottom: 15px" class="col">
       <img class="img-fluid" src="assets/images/rss2.jpg">
     </div>
-    <div style="padding: 15px" class="col">
-      <img class="img-fluid" src="assets/images/rss1.jpg">
+        </div>
+        <div class="row">
+    <div style="padding-bottom: 15px; " class="col">
+      <img style="object-fit: cover" class="img-fluid" src="assets/images/rss12.webp">
     </div>
     
   </div>
