--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="row justify-content-center">
                
                
-                <div class="col-12">
+                <div style="padding: 30px" class="col-12">
                      <br><br>
                     <h3 class="title text-uppercase" style="text-align: center;">My Article</h3><br/><br/>
                     <h5>This article is about “ I hate Terrorism “ (Islamic Ottawa Hindustan bachav)<br/><br/>
