--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
                                     <div class="ht-add-thumb mr-3">
                                         <img src="assets/images/header/02.png" alt="email">
                                     </div>
+                                    <a href="mailto:voteforindiainfo@gmail.com">
                                     <div class="ht-add-content">
                                         <span>Email : </span>
                                         <span class="d-block text-bold">voteforindiainfo@gmail.com</span>
                                     </div>
+                                        </a>
                                 </li>
                                 <li class="d-flex flex-wrap align-items-center">
                                     <div class="ht-add-thumb mr-3">
@@ -649,10 +651,12 @@
                                     <div class="ftt-thumb">
                                         <img src="assets/images/footer/icon/02.png" alt="footer-icon">
                                     </div>
+                                    <a href="mailto:voteforindiainfo@gmail.com">
                                     <div class="ftt-content">
                                         <p class="mb-0">Email : voteforindiainfo@gmail.com
                                         </p>
                                     </div>
+                                        </a>
                                 </div>
                             </div>
                         </div>
