--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
 
     <!-- ==========Banner Section Starts Here========== -->
     <section class="banner-section oh bg_img" data-background="assets/images/banner/banner.jpg">
+        <div style="padding:20px;">
+            <p>Modi A to Z development Video</p><a href="https://www.youtube.com/watch?v=0nc327jDVLk">https://www.youtube.com/watch?v=0nc327jDVLk</a>
+        </div>
         <div class="top-shape-content d-none d-xl-block">
             <img src="assets/images/banner/shape.png" alt="banner" class="bs-item" data-value="-3">
         </div>
