--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-<!-- Mirrored from labartisan.net/demo/template/lonelypro/lonelypro/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 09 Apr 2023 17:43:11 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -97,9 +94,7 @@
 
     <!-- ==========Banner Section Starts Here========== -->
     <section class="banner-section oh bg_img" data-background="assets/images/banner/banner.jpg">
-        <div style="padding:20px;">
-            <p>Modi A to Z development Video</p><a href="https://www.youtube.com/watch?v=0nc327jDVLk">https://www.youtube.com/watch?v=0nc327jDVLk</a>
-        </div>
+        
         <div class="top-shape-content d-none d-xl-block">
             <img src="assets/images/banner/shape.png" alt="banner" class="bs-item" data-value="-3">
         </div>
@@ -125,6 +120,9 @@
 
     <!-- ==========Causes Section Starts Here========== -->
     <div class="causes-section style-2 padding-top padding-bottom" style="background-color: orange;">
+        <div style="padding:20px;">
+            <p style="color: black">Modi A to Z development Video</p><a href="https://www.youtube.com/watch?v=0nc327jDVLk">https://www.youtube.com/watch?v=0nc327jDVLk</a>
+        </div>
         <div class="container">
              <div class="row">
                  <div class="col">
